documentation:add seguranca nas rotas e docs
